<resources>
    <string name="app_name">GasLoyalty</string>
    <string name="gasloyalty">GasLoyalty</string>
    <string name="scan">Scan Tank Code</string>
    <string name="check_connections">Sorry we couid not make connections to our servers. kindly check your internet connection</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="user_name">user name</string>
    <string name="read_qrcode">Scan Tank Code</string>
    <string name="read_plate_number">Capture Plate Number</string>
    <string name="language">Language</string>
    <string name="rotate">0</string>
    <string name="enter_name_password">enter user name or password</string>
    <string name="correct_username_password">enter correct username or password</string>
    <string name="signout">Signout</string>
    <string name="choose_language">Choose language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="cancel">Cancel</string>
    <string name="want_logout_from_app">Are you sure to log out from app?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="name">Name :</string>
    <string name="plate_no">Plate No :</string>
    <string name="tank_id">Tank ID :</string>
    <string name="balance">Balance :</string>
    <string name="charge">Charge</string>
    <string name="no_data_found_for_this_tank">Sorry no data found for this tank</string>
    <string name="verify">verify</string>
    <string name="cnt_verify_plate_num">Can not Verify Plate No</string>
    <string name="enter_metetrs">Enter metetrs</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="submit">Submit</string>
    <string name="enter_metrs">please enter meters</string>
    <string name="enter_amount_please">please enter amount</string>
    <string name="otp_send">Verification Code sent successfully</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="error_verify_code">error in verification code please try again</string>
    <string name="charged_successfully">charged successfully</string>
    <string name="maintenance_date">Maintenance Date :</string>
    <string name="please_review_gas_pipe_maintenance">Please review gas cylinder maintenance</string>
    <string name="no_data_found_for_this_palte_number">No data found for plate number</string>
    <string name="update_plate_number">Update Plate Number</string>
    <string name="verifed_plate_num">Plate Number Verified You Can Charge now</string>
    <string name="can_charge_now">يمكنك الشحن الان</string>
    <string name="num1">num1</string>
    <string name="num2">num2</string>
    <string name="num3">num3</string>
    <string name="num4">num4</string>
    <string name="ch1">ch1</string>
    <string name="ch3">ch3</string>
    <string name="ch2">ch2</string>
    <string name="update">Update</string>
    <string name="enter_valid_plate">enter valid plate</string>
    <string name="verify_plate">cant verify plate number</string>
    <string name="check_data">Please Check Your data</string>
    <string name="verify_plate_number">Verify Plate number</string>
    <string name="tank_details">Tank details</string>

</resources>