<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="x"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/dialog_icon"
            android:layout_width="100dp"
            android:layout_height="132dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/update_plate_number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/dialog_icon" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel"
            tools:ignore="UnusedAttribute">

            <EditText
                android:id="@+id/tvNum1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/roundedbuttonprimary"
                android:gravity="center"
                android:hint="@string/num1"
                android:inputType="number"
                android:maxLength="1"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="Autofill,RtlCompat" />

            <EditText
                android:id="@+id/tvNum2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/roundedbuttonprimary"
                android:gravity="center"
                android:hint="@string/num2"
                android:inputType="number"
                android:maxLength="1"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="Autofill,RtlCompat" />

            <EditText
                android:id="@+id/tvNum3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/roundedbuttonprimary"
                android:gravity="center"
                android:hint="@string/num3"
                android:inputType="number"
                android:maxLength="1"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="Autofill,RtlCompat" />

            <EditText
                android:id="@+id/tvNum4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/roundedbuttonprimary"
                android:gravity="center"
                android:hint="@string/num4"
                android:inputType="number"
                android:maxLength="1"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="Autofill,RtlCompat" />


            <EditText
                android:id="@+id/tvCh1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/roundedbuttonprimary"
                android:gravity="center"
                android:hint="@string/ch1"
                android:inputType="number"
                android:maxLength="1"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="Autofill,RtlCompat" />


            <EditText
                android:id="@+id/tvCh2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/roundedbuttonprimary"
                android:gravity="center"
                android:hint="@string/ch2"
                android:inputType="number"
                android:maxLength="1"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="Autofill,RtlCompat" />


            <EditText
                android:id="@+id/tvCh3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/roundedbuttonprimary"
                android:gravity="center"
                android:hint="@string/ch3"
                android:inputType="number"
                android:maxLength="1"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"

                tools:ignore="Autofill,RtlCompat" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/submitbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbuttonblue"
            android:text="@string/update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPlate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>