<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="5dp"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x"
            android:id="@+id/closeBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="15dp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/dialog_icon"
            android:layout_width="100dp"
            android:layout_height="132dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_plate_number"
            android:id="@+id/updateplatebtn"
            android:layout_marginStart="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_icon"
            android:layout_marginLeft="5dp" />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plate_layout"
            app:layout_constraintTop_toBottomOf="@+id/updateplatebtn"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plate_no"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plate_tv"
                tools:text="ا ف ف 8 1 6"
                android:layout_marginStart="5dp"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="5dp" />



        </LinearLayout>

        <TextView
            android:id="@+id/no_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_data_found_for_this_palte_number"
            android:textColor="@color/red"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/plate_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />








    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>